tests/ui/frontmatter/fence-unclosed-2.stderr
error: unclosed frontmatter
  --> $DIR/fence-unclosed-2.rs:1:1
   |
LL | / ----cargo
...  |
LL | |     "----"
LL | | }
   | |__^
   |
note: frontmatter opening here was not closed
  --> $DIR/fence-unclosed-2.rs:1:1
   |
LL | ----cargo
   | ^^^^

error: aborting due to 1 previous error

